# cacao-accounting-modulo-activo-fijo

./: Especificacion Requerimientos del Software.md  README.md  ers.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
cacao_accounting_activofijo/: __init__.py
cacao_accounting_modulo_activofijo/: __init__.py  db.py  forms.py
cacao_accounting_modulo_activofijo/templates/: activofijo.html
cacao_accounting_modulo_activofijo/templates/forms/: familia.html  registro.html  ubicacion.html
cacao_accounting_modulo_activofijo/templates/lists/: familia.html  registro.html  ubicacion.html
dev/: clean-query.sql
tests/ghactions/: mysql.py  postgresql.py  sqlite.py
