[project]
name = "cacao_accounting_modulo_activofijo"
version = "0.0.1dev"
description = "Modulo Activo Fijo."

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127